--- a/Spotify-Clone/Views/PlaylistViewController.xib
+++ b/Spotify-Clone/Views/PlaylistViewController.xib
@@ -10,6 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaylistViewController" customModule="Spotify_Clone" customModuleProvider="target">
             <connections>
+                <outlet property="artistImage" destination="oDn-D9-MqM" id="Bpl-Gp-jFn"/>
+                <outlet property="artistName" destination="Dge-jf-DII" id="S3L-NG-ZLT"/>
                 <outlet property="playlistCV" destination="3rK-rF-h2Y" id="kxa-Wz-ZXs"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -20,28 +22,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kZ4-cc-kTQ" userLabel="Parent View">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="iEQ-RV-gb7" userLabel="Parent SV">
-                            <rect key="frame" x="16" y="32" width="382" height="856"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="iEQ-RV-gb7" userLabel="Parent SV">
+                            <rect key="frame" x="16" y="0.0" width="382" height="844"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Ed Sheeran" translatesAutoresizingMaskIntoConstraints="NO" id="oDn-D9-MqM">
-                                    <rect key="frame" x="0.0" y="0.0" width="382" height="200"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="382" height="150"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="200" id="Y0S-Nj-4Ge"/>
+                                        <constraint firstAttribute="height" constant="150" id="Y0S-Nj-4Ge"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="details" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dge-jf-DII">
-                                    <rect key="frame" x="0.0" y="216" width="382" height="50"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="50" id="Lga-DC-5pR"/>
-                                    </constraints>
+                                    <rect key="frame" x="0.0" y="158" width="382" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="evv-TF-9qo">
-                                    <rect key="frame" x="0.0" y="282" width="382" height="40"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="evv-TF-9qo" userLabel="Spotify Logo SV">
+                                    <rect key="frame" x="0.0" y="186.5" width="382" height="40"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Spotify" translatesAutoresizingMaskIntoConstraints="NO" id="UUw-Gq-B4F">
                                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -53,52 +52,44 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spotify" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="teh-D5-iSc">
                                             <rect key="frame" x="56" y="0.0" width="326" height="40"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </stackView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfF-ra-4BF">
-                                    <rect key="frame" x="0.0" y="338" width="382" height="20.5"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1M Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfF-ra-4BF">
+                                    <rect key="frame" x="0.0" y="234.5" width="382" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="NRZ-Ec-MSH">
-                                    <rect key="frame" x="0.0" y="374.5" width="382" height="40"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="NRZ-Ec-MSH" userLabel="Play SV">
+                                    <rect key="frame" x="0.0" y="263" width="382" height="60.5"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="m6L-4J-beK">
-                                            <rect key="frame" x="0.0" y="0.0" width="78.5" height="40"/>
+                                            <rect key="frame" x="0.0" y="15" width="89.5" height="31"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r3J-xe-Wcj" userLabel="favorite">
-                                                    <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="qzE-i9-zOJ"/>
-                                                        <constraint firstAttribute="width" constant="40" id="sbb-G1-wj4"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="0.0" y="0.0" width="45.5" height="31"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vsX-B0-Vco" userLabel="menu">
-                                                    <rect key="frame" x="48" y="0.0" width="30.5" height="40"/>
+                                                    <rect key="frame" x="53.5" y="0.0" width="36" height="31"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="info" catalog="system"/>
                                                 </button>
                                             </subviews>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zTM-f1-s9N">
-                                            <rect key="frame" x="342" y="0.0" width="40" height="40"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="40" id="HGF-Zg-nSx"/>
-                                                <constraint firstAttribute="height" constant="40" id="Otf-2U-Xzv"/>
-                                            </constraints>
+                                            <rect key="frame" x="298" y="0.0" width="84" height="60.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="Play Button"/>
                                         </button>
                                     </subviews>
                                 </stackView>
                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="3rK-rF-h2Y">
-                                    <rect key="frame" x="0.0" y="430.5" width="382" height="425.5"/>
+                                    <rect key="frame" x="0.0" y="331.5" width="382" height="512.5"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oop-92-xtu">
                                         <size key="itemSize" width="200" height="200"/>
@@ -111,7 +102,7 @@
                         </stackView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="iEQ-RV-gb7" firstAttribute="top" secondItem="kZ4-cc-kTQ" secondAttribute="top" constant="32" id="7N8-wN-ntX"/>
+                        <constraint firstItem="iEQ-RV-gb7" firstAttribute="top" secondItem="kZ4-cc-kTQ" secondAttribute="top" id="7N8-wN-ntX"/>
                         <constraint firstAttribute="bottom" secondItem="iEQ-RV-gb7" secondAttribute="bottom" constant="8" id="JNv-mS-OG5"/>
                         <constraint firstItem="iEQ-RV-gb7" firstAttribute="leading" secondItem="kZ4-cc-kTQ" secondAttribute="leading" constant="16" id="U15-qZ-Lvs"/>
                         <constraint firstAttribute="trailing" secondItem="iEQ-RV-gb7" secondAttribute="trailing" constant="16" id="y7Z-SK-9uj"/>
@@ -124,9 +115,9 @@
                 <constraint firstAttribute="bottom" secondItem="kZ4-cc-kTQ" secondAttribute="bottom" id="2ew-0m-sK9"/>
                 <constraint firstItem="kZ4-cc-kTQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="OHK-tg-ATO"/>
                 <constraint firstAttribute="trailing" secondItem="kZ4-cc-kTQ" secondAttribute="trailing" id="cAJ-Ng-X5Z"/>
-                <constraint firstItem="kZ4-cc-kTQ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="-44" id="wYZ-NM-S7c"/>
+                <constraint firstItem="kZ4-cc-kTQ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wYZ-NM-S7c"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="114"/>
+            <point key="canvasLocation" x="137.68115942028987" y="113.83928571428571"/>
         </view>
     </objects>
     <resources>
