--- a/Spotify-Clone/Views/PlaySongViewController.xib
+++ b/Spotify-Clone/Views/PlaySongViewController.xib
@@ -10,6 +10,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlaySongViewController" customModule="Spotify_Clone" customModuleProvider="target">
             <connections>
+                <outlet property="favButton" destination="6Si-dU-v2Z" id="BND-U4-aJx"/>
+                <outlet property="loopButton" destination="kRb-i2-QU0" id="LEz-BX-oo8"/>
+                <outlet property="nextButton" destination="ike-yh-NoI" id="chr-Nh-3nE"/>
+                <outlet property="playButton" destination="vPF-CP-jWy" id="2PP-AK-O93"/>
+                <outlet property="prevButton" destination="Zwq-Wj-peu" id="Az1-gP-zRv"/>
+                <outlet property="progressView" destination="10N-eQ-f7w" id="UfU-fD-W8S"/>
+                <outlet property="shuffleButton" destination="xjp-ih-uf9" id="q66-Xb-nkf"/>
+                <outlet property="songNameLabel" destination="RAP-bd-KHt" id="4hI-dK-15B"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -33,8 +41,8 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="A7B-Ks-dUg">
                                     <rect key="frame" x="0.0" y="366" width="398" height="91.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAP-bd-KHt">
-                                            <rect key="frame" x="0.0" y="0.0" width="41.5" height="91.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="song name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAP-bd-KHt">
+                                            <rect key="frame" x="0.0" y="0.0" width="84" height="91.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -85,7 +93,6 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="8f1-4w-O7d" firstAttribute="top" secondItem="diS-V5-7GC" secondAttribute="top" id="0s1-7G-rUu"/>
                         <constraint firstAttribute="bottom" secondItem="8f1-4w-O7d" secondAttribute="bottom" constant="8" id="GKs-CR-qEW"/>
