--- a/Spotify-Clone/Views/SignUpViewController.xib
+++ b/Spotify-Clone/Views/SignUpViewController.xib
@@ -9,8 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignUpViewController" customModule="Spotify_Clone" customModuleProvider="target">
             <connections>
+                <outlet property="backButton" destination="Ktp-Ya-hhO" id="6Tg-de-lyW"/>
                 <outlet property="emailTextField" destination="b0m-i5-w1O" id="ei6-TH-hV8"/>
                 <outlet property="passwordTextField" destination="uQM-8q-ouD" id="zSm-Bp-faB"/>
+                <outlet property="signUpButton" destination="hI9-yL-sYX" id="neZ-ig-lPq"/>
+                <outlet property="signUpLabel" destination="fz6-QJ-6HN" id="xfP-Dn-M4h"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,12 +25,10 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="VLr-7E-KRf">
                     <rect key="frame" x="16" y="40" width="382" height="305"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ktp-Ya-hhO">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ktp-Ya-hhO" userLabel="backButton">
                             <rect key="frame" x="0.0" y="0.0" width="382" height="31"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system">
-                                <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </buttonConfiguration>
+                            <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
                             <connections>
                                 <action selector="goBackButtonPressed:" destination="-1" eventType="touchUpInside" id="71f-04-57B"/>
                             </connections>
@@ -38,7 +39,7 @@
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fz6-QJ-6HN">
                                     <rect key="frame" x="0.0" y="0.0" width="382" height="36"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b0m-i5-w1O">
@@ -62,13 +63,8 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="50" id="bZT-Bf-KsJ"/>
                                     </constraints>
-                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="Sign Up for Free">
-                                        <backgroundConfiguration key="background" cornerRadius="25">
-                                            <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </backgroundConfiguration>
-                                    </buttonConfiguration>
+                                    <buttonConfiguration key="configuration" style="plain" title="Sign Up for Free"/>
                                     <connections>
                                         <action selector="signUpButtonPressed:" destination="-1" eventType="touchUpInside" id="kAB-1W-igs"/>
                                     </connections>
@@ -79,7 +75,6 @@
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="VLr-7E-KRf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="0t0-31-w89"/>
                 <constraint firstItem="VLr-7E-KRf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="9dV-vb-T8V"/>
