--- a/Spotify-Clone/Views/PlaySongViewController.xib
+++ b/Spotify-Clone/Views/PlaySongViewController.xib
@@ -47,10 +47,13 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Si-dU-v2Z">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Si-dU-v2Z" userLabel="favButton">
                                             <rect key="frame" x="352.5" y="0.0" width="45.5" height="91.5"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
+                                            <connections>
+                                                <action selector="favButtonPressed:" destination="-1" eventType="touchUpInside" id="Yhz-Di-oVs"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </stackView>
